<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.modul1.android.rifyandaruwibisono_1202150088_modul1.SecondActivity">

    <TextView
        android:id="@+id/Makan2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="56dp"
        android:text="@string/Makan2"
        android:textSize="36sp"
        />
    <TextView
        android:id="@+id/tempat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Makan2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:textSize="20sp"
        />
    <TextView
        android:id="@+id/menumakanan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tempat"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp"
        android:text="@string/menumakanan"
        />
    <TextView
        android:id="@+id/menupilih"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/menumakanan"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/porsi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/menupilih"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="43dp"
        android:text="@string/porsi" />

    <TextView
        android:id="@+id/jumlah2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/porsi"
        android:layout_alignStart="@+id/porsi"
        android:layout_below="@+id/porsi"
        android:layout_marginTop="35dp" />

    <TextView
        android:id="@+id/harga"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/jumlah2"
        android:layout_alignStart="@+id/jumlah2"
        android:layout_below="@+id/jumlah2"
        android:layout_marginTop="23dp"
        android:text="@string/harga" />

    <TextView
        android:id="@+id/hargato"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/harga"
        android:layout_alignStart="@+id/harga"
        android:layout_below="@+id/harga"
        android:layout_marginTop="17dp"
         />


</RelativeLayout>